[package]
name = "bsos"
version = "0.1.0"
edition = "2021"

[lib]
test = false
doctest = false
bench = false

[dependencies]
bootloader = "0.9"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
spin = "0.9.8"
volatile = "0.2"

[[bin]]
name = "bsos"
path = "src/main.rs"
test = false
doctest = false
bench = false
