[package]
name = "bsos"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
linked_list_allocator = "0.9"
pc-keyboard = "0.8.0"
pic8259 = "0.10"
spin = "0.9.8"
uart_16550 = "0.3.2"
volatile = "0.2"
x86_64 = "0.14"

[package.metadata.bootimage]
test-args = [
	"-device",
	"isa-debug-exit,iobase=0xf4,iosize=0x04",
	"-serial",
	"stdio",
	"-display",
	"none",
]
test-success-exit-code = 33 # (0x10 << 1) | 1

[[test]]
name = "stack_overflow"
harness = false
